Se realiza una actualizacion al proyecto Yessica

--- a/src/vista/GUIAaron.form
+++ b/src/vista/GUIAaron.form
@@ -41,7 +41,11 @@
                           <Component id="txtNombre" min="-2" pref="162" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="lblYe" min="-2" max="-2" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace pref="35" max="32767" attributes="0"/>
           </Group>
@@ -58,7 +62,10 @@
                   <Component id="txtNombre" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
-              <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="lblYe" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="btnAgregar" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -110,6 +117,11 @@
           <Font name="Noto Sans" size="12" style="3"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Compartir:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="lblYe">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Ye"/>
       </Properties>
     </Component>
   </SubComponents>
